<resources>
    <string name="app_name">ManBanJalBu</string>
    <string name="join">회원가입</string>

    <string name="businessCardBook">명함첩</string>
    <string name="myBusinessCardDetails">내 명함 상세</string>
    <string name="businessCardDetails">명함 상세</string>
    <string name="defaultImageSetting">기본 이미지 설정</string>
    <string name="noBusinessCardRegistered">등록된 실제 명함이 없습니다.</string>
    <string name="searchText">이름, 회사명 검색</string>
    <string name="businessCardShoot">명함 촬영</string>
    <string name="selectImageFromAlbum">앨범에서 사진 선택</string>

    <string name="name">이름</string>
    <string name="rank">직급</string>
    <string name="companyName">회사명</string>
    <string name="email">이메일</string>
    <string name="mobile">휴대폰 번호</string>
    <string name="companyNumber">회사 번호</string>

    <string name="calendar">일정</string>
    <string name="calendarDetails">일정 상세</string>
    <string name="calendarAdd">일정 추가</string>
    <string name="date">날짜</string>
    <string name="location">장소</string>
    <string name="participants">참여자</string>
    <string name="memo">메모</string>

    <string name="teamCards">팀명함</string>
    <string name="createTeam">팀 생성</string>
    <string name="myTeam">나의 팀</string>
    <string name="create">생성</string>
    <string name="introduceTeam">팀소개</string>
    <string name="teamCode">팀코드</string>
    <string name="teamMember">팀원</string>
    <string name="sendKakaoTalk">카카오톡 링크 보내기</string>
    <string name="sendMessage">문자 링크 보내기</string>
    <string name="copyTeamCode">팀 코드 복사하기</string>
    <string name="viewMore">더보기</string>

    <string name="save">저장</string>
    <string name="next">다음</string>
    <string name="complete">완료</string>
    <string name="modify">수정</string>
    <string name="modifyComplete">수정 완료</string>
    <string name="cancel">취소</string>
    <string name="input">입력</string>
    <string name="reInput">재입력</string>

    <string name="QRCreate">QR코드 생성</string>
    <string name="QRScan">QR코드 스캔</string>
</resources>