<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="209dp">

        <ImageView
            android:id="@+id/myPicture"
            android:layout_width="116dp"
            android:layout_height="110dp"
            android:layout_gravity="right|center_horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            tools:src="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="209dp"
            android:layout_marginStart="20sp"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="20sp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/myName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/myRank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rank" />

            <TextView
                android:id="@+id/myCompany"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/companyName" />

            <TextView
                android:id="@+id/myEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="13dp"
                android:text="@string/email" />

            <TextView
                android:id="@+id/myMobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mobile" />

            <TextView
                android:id="@+id/myCompanyNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/companyNumber" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</FrameLayout>